apps/spring-petclinic/deploy/virtualservice.yml
#@ load("@ytt:data", "data")

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-petclinic-virtual-service
  namespace: spring-petclinic
spec:
  hosts:
    - spring-petclinic.apps.lab.home
  gateways:
    - app-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: spring-petclinic
        port:
          number: 8080
